--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,21 +1,41 @@
-.smain{
+/* .smain{
     display: flex;
     flex-direction: column;
-    /* border: 2px solid red; */
+    border: 2px solid red;
     height: 99vh;
     width: 20vw;
-    /* margin-left: 30px; */
+    margin-left: 30px;
     background-color: cyan;
-}
+} */
 
-.smain .sidebar{
+/* .smain .sidebar{
     display: flex;
         flex-direction: column;
-        /* background-color: aqua; */
+        background-color: aqua;
         height: 100%;
         padding-left: 30px;
         
+} */
+
+.sider-comp{
+    background-color: cyan;
+    /* height: 100%; */
+    display: flex;
+    flex-direction: column;
+    width: 11vw;
+    padding: 1.5rem;
 }
-.smain .sidebar NavLink{
-    margin: 10px 5px;
+.sider-comp a{
+    padding: 10px 5px;
+    margin: 5px 0px;
+    text-decoration: none;
+    border: 2px solid black;
+    cursor: pointer;
+    color: black;
+    background-color: wheat;
+    border-radius: 5px;
+}
+
+.sider-comp .active{
+    background-color: antiquewhite;
 }
